force-app/main/default/objects/SPEN_Inspection__c/SPEN_Inspection__c.object-meta.xml
<CustomObject>
    <description>Capture details regarding post-quarantine, scheduled, insurance, and compliance inspections/testing.</description>
    <label>Inspection</label>
    <nameField>
        <displayFormat>INSP-{YYYY}-{MM}-{0}</displayFormat>
        <label>Inspection Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inspections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>