force-app/main/default/objects/SPEN_Inspection__c/fields/SPEN_Comments__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Comments__c</fullName>
    <description>Text area for any comments relating to the inspection of the item.</description>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>