force-app/main/default/objects/SPEN_Inspection__c/fields/SPEN_Date_Performed__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Date_Performed__c</fullName>
    <description>The date that the Inspection, regardless of type or internal/external, was carried out.</description>
    <label>Date Performed</label>
    <type>Date</type>
</CustomField>