force-app/main/default/objects/SPEN_Inspection__c/fields/SPEN_Inspected_By__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Inspected_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to User object to capture the internal user that completed the Inspection.</description>
    <label>Inspected By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>