force-app/main/default/objects/SPEN_Inspection__c/fields/SPEN_Inspected_By_External__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Inspected_By_External__c</fullName>
    <description>Text field to capture the details of an external resource that carried out the inspection.</description>
    <label>Inspected By (External)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>