force-app/main/default/objects/SPEN_Inspection__c/fields/SPEN_Location_Inspected__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Location_Inspected__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Location Inspected</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Inspections</relationshipLabel>
    <relationshipName>Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>