force-app/main/default/objects/SPEN_Inspection__c/fields/SPEN_Next_Action__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Next_Action__c</fullName>
    <label>Next Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Needs Calibration</fullName>
            </value>
            <value>
                <fullName>Needs Repair</fullName>
            </value>
            <value>
                <fullName>Unserviceable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>