force-app/main/default/objects/SPEN_Inspection__c/fields/SPEN_Result__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Result__c</fullName>
    <description>The result of the Inspection carried out.</description>
    <label>Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>