force-app/main/default/objects/SPEN_Inspection__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Calibration</fullName>
            </value>
            <value>
                <fullName>Inspection</fullName>
            </value>
            <value>
                <fullName>Inventory Check</fullName>
            </value>
            <value>
                <fullName>Quarantine</fullName>
                <isActive>false</isActive>
                <label>Quarantine</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>