force-app/main/default/objects/SPEN_Inspection__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Type__c</columns>
    <columns>SPEN_Result__c</columns>
    <columns>SPEN_Inspected_By__c</columns>
    <columns>SPEN_Inspected_By_External__c</columns>
    <columns>SPEN_Location_Inspected__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>