force-app/main/default/objects/SPEN_Inspection__c/listViews/SPEN_Wrexham_Inspections.listView-meta.xml
<ListView>
    <fullName>SPEN_Wrexham_Inspections</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Type__c</columns>
    <columns>SPEN_Result__c</columns>
    <columns>SPEN_Inspected_By__c</columns>
    <columns>SPEN_Inspected_By_External__c</columns>
    <columns>SPEN_Location_Inspected__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SPEN_Location_Inspected__c</field>
        <operation>equals</operation>
        <value>Wrexham</value>
    </filters>
    <label>Wrexham Inspections</label>
</ListView>